# calco

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
data/: costes_clean.csv
data/clean/: costes_clean.csv  costes_clean_2.csv  fabricaciones_clean.csv  master_lotes_clean.csv  master_lotes_clean_old.csv
data/raw/: costes.csv  costes_original.csv  fabricaciones.csv  fabricaciones_2025.csv  master_articulos.csv  master_lotes.csv
docs/: UML_CalculadoraCostes.jam
notebooks/: anonimizacion.ipynb  test.ipynb
src/: __init__.py
src/calculadora_costes/cleaning/: __init__.py
src/calculadora_costes/config/: __init__.py
src/calculadora_costes/services/: cost_calculator.py  encoder.py  outliers_manager.py  visualizations_manager.py
src/calculadora_margen/cleaning/: __init__.py  cleaner_df.py  costes_cleaner_class.py  costes_cleaner_script.py  guardado.txt  outliers_manager.py  params.py  transformations.py  validador.py
src/calculadora_margen/config/: parameters.py
src/calculadora_margen/encoder/: encoder.py
src/calculadora_margen/maths/: __init__.py  calculator.py
src/calculadora_margen/reporting/: transformation_report.py
src/calculadora_margen/services/: __init__.py  cost_calculator.py  outliers_manager.py  validator.py  visualizations_manager.py
src/cleaning/: cleaner_master.py  costes_cleaner_script.py  master_lotes.py  master_lotes_costes.py  validador.py
