[metadata]
name = calculadora_margen
version = 0.1.0
description = Herramienta de cálculo y análisis de costes de fabricación
author = Laura Vela
author_email = tu@laura.vela.pas@gmail.com

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.3
    numpy>=1.21
    matplotlib>=3.5
    seaborn>=0.12

[options.package_data]
* = *.csv, *.txt
